--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "undici": "^5.22.0"
   }
 }
