--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "undici": "^5.22.0"
+  },
+  "dependencies": {
+    "whatwg-url": "^12.0.1"
   }
 }
